crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/034.cypher
MATCH (n:A), (m:B) RETURN n, m; MATCH (x:C) RETURN x
